feature(#4156): Add patterns count API
